--- a/manjaro/kde/profile.conf
+++ b/manjaro/kde/profile.conf
@@ -55,13 +55,13 @@ disable_systemd=('pacman-init')
 ################# livecd #################
 
 # unset defaults to given value
-# hostname="manjaro"
+# hostname="outraged"
 
 # unset defaults to given value
-# username="manjaro"
+# username="Outraged"
 
 # unset defaults to given value
-# password="manjaro"
+# password="outraged"
 
 # the login shell
 # defaults to bash
